--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
-<p><strong>moodns</strong> is a pretty minimal multicast DNS server.</p>
+<p><strong>moodns</strong> is a server implementation of multicast DNS. Multicast DNS allows
+programs to discover hosts running on a local network by using familiar DNS
+programming interfaces without the need for a conventional DNS server.</p>
 
 <h2 id="OPTIONS">OPTIONS</h2>
 
@@ -105,11 +107,11 @@ Show the program's help message and exit.</p>
 
 <h2 id="AUTHOR">AUTHOR</h2>
 
-<p>Alessandro Ghedini <a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#x61;&#x6c;&#101;&#115;&#x73;&#x61;&#110;&#x64;&#x72;&#111;&#x40;&#103;&#104;&#101;&#100;&#x69;&#110;&#105;&#x2e;&#109;&#x65;" data-bare-link="true">&#x61;&#108;&#101;&#x73;&#115;&#x61;&#110;&#x64;&#x72;&#x6f;&#64;&#103;&#x68;&#101;&#x64;&#x69;&#110;&#105;&#46;&#x6d;&#101;</a></p>
+<p>Alessandro Ghedini <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;&#97;&#108;&#x65;&#115;&#x73;&#97;&#x6e;&#100;&#114;&#x6f;&#x40;&#x67;&#x68;&#x65;&#100;&#105;&#x6e;&#105;&#x2e;&#109;&#101;" data-bare-link="true">&#97;&#x6c;&#x65;&#115;&#115;&#x61;&#x6e;&#x64;&#x72;&#111;&#64;&#x67;&#x68;&#101;&#100;&#x69;&#x6e;&#105;&#46;&#x6d;&#x65;</a></p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
-<p>Copyright (C) 2014 Alessandro Ghedini <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#111;&#x3a;&#x61;&#108;&#101;&#115;&#115;&#x61;&#x6e;&#100;&#114;&#111;&#64;&#x67;&#x68;&#101;&#x64;&#105;&#x6e;&#105;&#x2e;&#x6d;&#x65;" data-bare-link="true">&#97;&#108;&#x65;&#x73;&#x73;&#x61;&#110;&#100;&#114;&#111;&#x40;&#103;&#104;&#101;&#x64;&#x69;&#x6e;&#x69;&#x2e;&#x6d;&#x65;</a></p>
+<p>Copyright (C) 2014 Alessandro Ghedini <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#x6c;&#101;&#115;&#115;&#x61;&#110;&#100;&#114;&#111;&#x40;&#x67;&#104;&#x65;&#100;&#x69;&#110;&#105;&#x2e;&#x6d;&#101;" data-bare-link="true">&#x61;&#108;&#101;&#115;&#x73;&#x61;&#x6e;&#100;&#x72;&#111;&#64;&#103;&#104;&#101;&#100;&#x69;&#x6e;&#105;&#46;&#x6d;&#101;</a></p>
 
 <p>This program is released under the 2 clause BSD license.</p>
 
